--- a/AppDev/Src/Screen1.fx.yaml
+++ b/AppDev/Src/Screen1.fx.yaml
@@ -1,2 +1,10 @@
 Screen1 As screen:
 
+    Label1 As label:
+        Height: =84
+        Text: ="Bonjour " & User().FullName
+        Width: =452
+        X: =40
+        Y: =40
+        ZIndex: =1
+
