--- a/AppDev/Src/Screen1.fx.yaml
+++ b/AppDev/Src/Screen1.fx.yaml
@@ -9,7 +9,7 @@ Screen1 As screen:
         ZIndex: =1
 
     Label2 As label:
-        Text: ="Nouveau Test"
+        Text: ="Nouveau Test et nouvelle modif"
         X: =40
         Y: =184
         ZIndex: =2
