--- a/AppDev/CanvasManifest.json
+++ b/AppDev/CanvasManifest.json
@@ -27,6 +27,7 @@
       "enableappembeddingux": true,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
+      "enableeditcacherefreshfrequency": false,
       "enableexcelonlinebusinessv2connector": false,
       "enableideaspanel": true,
       "enableonstart": true,
