--- a/AppDev/Src/Screen1.fx.yaml
+++ b/AppDev/Src/Screen1.fx.yaml
@@ -14,3 +14,9 @@ Screen1 As screen:
         Y: =184
         ZIndex: =2
 
+    Label3 As label:
+        Text: ="NEW"
+        X: =40
+        Y: =322
+        ZIndex: =3
+
