--- a/AppDev/CanvasManifest.json
+++ b/AppDev/CanvasManifest.json
@@ -17,7 +17,7 @@
       "blockmovingcontrol": true,
       "classiccontrols": false,
       "componentauthoring": true,
-      "copyandmerge": true,
+      "copyandmerge": false,
       "datatablev2control": true,
       "delaycontrolrendering": true,
       "delayloadscreens": true,
@@ -27,6 +27,7 @@
       "enableappembeddingux": true,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
+      "enableeditcacherefreshfrequency": false,
       "enableexcelonlinebusinessv2connector": false,
       "enableideaspanel": true,
       "enableonstart": true,
