--- a/AppDev/Src/Screen1.fx.yaml
+++ b/AppDev/Src/Screen1.fx.yaml
@@ -9,7 +9,7 @@ Screen1 As screen:
         ZIndex: =1
 
     Label2 As label:
-        Text: ="Nouveau Test et nouvelle modif"
+        Text: ="Nouveau Test et nouvelle modif 2"
         X: =106
         Y: =173
         ZIndex: =2
